--- a/journey-app/src/App.css
+++ b/journey-app/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar {
+  display: flex;
+  align-items: center;
+  background: white;
+  margin-right: auto;
+  font-family: Helvetica;
+  font-weight: 300;
+  border-bottom: 5px solid orange;
+}
+
+.navbar__title {
+  margin: auto;
+  width: 60%;
+  padding: 12px
+}
+
+.navbar__item {
+  padding: 14px ;
+  cursor: pointer;
+  vertical-align: middle;
+  color: orange;
+  font-weight: 900;
+  font-size: 18px;
+}
+
+#headerLogo {
+  display: block;
+  width: 50%;
+  margin-right: auto;
+}
