--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,8 @@
   position:absolute;
   bottom:0;
   left: 0;
-  margin-left: 25%;
+  width: 75%;
+  margin-left: 150%;
   margin-bottom: 10px;
   line-height: 15px;
   background: #0069eb;
@@ -175,6 +176,29 @@
   margin: auto;
   display: block;
   padding-top: 25px;
+}
+
+#cardComments {
+  inline-size: 100%;
+  line-height: 1.5;
+}
+
+#updateButton {
+  position:absolute;
+  bottom:5;
+  left: 5;
+  width: 75%;
+  margin-left: 150%;
+  margin-bottom: 10px;
+  line-height: 15px;
+  background: #0069eb;
+  border-radius: 30px;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  padding: 15px 30px;
+  font-weight: 900;
+  text-decoration: none;
 }
 
 /* Add New Event Button */ 
