--- a/src/App.css
+++ b/src/App.css
@@ -270,12 +270,15 @@
   margin-bottom: 10px;
 }
 
+#inspiroText {
+ text-align: center;
+}
 
 #inspiroImg {
   float: left;
   max-height: 25%;
   max-width: 25%;
-  
+  margin-left: 50px;
   margin-right: 55px;
   display: block;
   
