image sizing fix

--- a/src/App.css
+++ b/src/App.css
@@ -176,10 +176,12 @@
 }
 
 #cardImage {
-  max-height: 90%;
-  max-width: 90%;
+  max-height: 70%;
+  max-width: 70%;
   object-fit: contain;
-  margin: auto;
+  float: left;
+  margin-left: 10px;
+  
   display: block;
   padding-top: 25px;
 }
